--- a/packages/renderer/src/assets/css/cardStyles.css
+++ b/packages/renderer/src/assets/css/cardStyles.css
@@ -2,15 +2,18 @@
   top: 2em;
   left: 1em;
   width: 100%;
-  min-width: 100em;
   height: 100%;
   display: flex;
   justify-content: space-around;
 }
 
+.cards .zone {
+  width: 30%;
+}
+
 .cardContainer {
   position: relative;
-  width: 30em;
+  width: 30%;
   height: 100%;
   min-height: 100em;
 }
@@ -26,21 +29,14 @@
   text-align: center;
 }
 
-.widthCustom1 {
-  min-width: 29em;
-}
-.widthCustom2 {
-  min-width: 29em;
-}
 .hCustom {
   height: 100%;
   min-height: 100em;
 }
 
 .card {
-  min-width: 25em;
   touch-action: none;
-  background: blue;
+  background: rgb(101, 101, 209);
   justify-content: center;
   flex-direction: column;
   align-items: center;
