--- a/packages/renderer/src/assets/css/whiteboardStyles.css
+++ b/packages/renderer/src/assets/css/whiteboardStyles.css
@@ -1,49 +1,5 @@
-.whiteboardPageContainer {
-  position: relative;
-}
-
-#notification {
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
-  width: 200px;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-.hidden {
-  display: none;
-}
-
-.whiteboardPageContainer #rotate-area {
-  height: 100%;
-  padding: 1rem;
-  overflow: hidden;
-  touch-action: none;
-}
-
-#arrow {
-  display: block;
-  margin: auto;
+.whiteboard {
   width: 100%;
   height: 100%;
-}
-
-#angle-info {
-  color: #666;
-  font-size: 2em;
-  position: absolute;
-  left: 1rem;
-  top: 1rem;
-}
-#scale-element {
-  display: block;
-  max-width: 100%;
-  margin: 1rem auto;
-  touch-action: none;
-}
-
-#scale-element.reset {
-  transition: transform 0.3s ease-in-out;
+  min-height: 100vh;
 }
