--- a/packages/renderer/src/assets/css/pollStyles.css
+++ b/packages/renderer/src/assets/css/pollStyles.css
@@ -154,6 +154,25 @@ input[type="radio"] + label > span {
   display: block;
 }
 
+.list-move, /* apply transition to moving elements */
+.list-enter-active,
+.list-leave-active {
+  transition: all 0.5s ease;
+}
+
+.list-enter-from,
+.list-leave-to {
+  opacity: 0;
+  transform: translateX(30px);
+}
+
+/* ensure leaving items are taken out of layout flow so that moving
+   animations can be calculated correctly. */
+.list-leave-active {
+  position: absolute;
+  max-width: 10em;
+}
+
 @keyframes firstAnimation {
   from {
     stroke-dashoffset: 100;
