--- a/packages/renderer/src/assets/css/whiteboardStyles.css
+++ b/packages/renderer/src/assets/css/whiteboardStyles.css
@@ -2,14 +2,20 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
+  touch-action: none;
+  user-select: none;
 }
 
 #rotate-area {
   position: absolute;
   top: 10em;
+  touch-action: none;
+  user-select: none;
 }
 
 #gesture-area {
   position: absolute;
   top: 10em;
+  touch-action: none;
+  user-select: none;
 }
