--- a/packages/renderer/src/assets/css/whiteboardStyles.css
+++ b/packages/renderer/src/assets/css/whiteboardStyles.css
@@ -7,10 +7,28 @@
 }
 
 #rotate-area {
-  position: absolute;
-  top: 10em;
+  position: relative;
+  top: 8em;
+  height: 100%;
+  padding: 1rem;
+  overflow: hidden;
   touch-action: none;
   user-select: none;
+}
+
+#arrow {
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+
+#angle-info {
+  color: #666;
+  font-size: 2em;
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
 }
 
 #gesture-area {
@@ -18,4 +36,15 @@
   top: 10em;
   touch-action: none;
   user-select: none;
+}
+
+#scale-element {
+  display: block;
+  max-width: 100%;
+  margin: 1rem auto;
+  touch-action: none;
+}
+
+#scale-element.reset {
+  transition: transform 0.3s ease-in-out;
 }
