--- a/packages/renderer/src/assets/css/dashboardStyles.css
+++ b/packages/renderer/src/assets/css/dashboardStyles.css
@@ -1,9 +1,210 @@
+.dashboardMain {
+  display: flex;
+}
+
+.dashboardMain .sidebar {
+  width: 18%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dashboardMain .mainContent {
+  margin-top: 1em;
+  width: 85%;
+}
+
 .dashboardMain .dashboardTitle {
   color: white;
   width: 20em;
-  margin: auto;
+  font-size: 3em;
 }
 
-.dashboardMain a {
-  margin: 1em;
+.dashboardMain .vertical-divider {
+  border-left: 1px solid gray;
+  height: 93vh;
+  width: 2em;
+  margin: 1em 1.5em;
+}
+
+.dashboardMain .horizontal-divider {
+  border-bottom: 1px solid gray;
+  width: 90%;
+  height: 2em;
+  margin: 1em 0em;
+}
+
+/*
+..######..####.########..########.########.....###....########.
+.##....##..##..##.....##.##.......##.....##...##.##...##.....##
+.##........##..##.....##.##.......##.....##..##...##..##.....##
+..######...##..##.....##.######...########..##.....##.########.
+.......##..##..##.....##.##.......##.....##.#########.##...##..
+.##....##..##..##.....##.##.......##.....##.##.....##.##....##.
+..######..####.########..########.########..##.....##.##.....##
+*/
+
+.dashboardMain .stationLogoContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2em;
+}
+
+.dashboardMain .stationLogoContainer img {
+  height: 8em;
+  width: 15em;
+  border: 1px solid white;
+}
+
+.dashboardMain .stationLogoContainer a {
+  display: block;
+  text-decoration: none;
+  background-color: lightgray;
+  width: 10em;
+  text-align: center;
+  margin: -0.2em 0 0 0;
+  padding: 0.2em 0.4em;
+  font-size: 0.8em;
+  white-space: nowrap;
+  text-transform: uppercase;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.dashboardMain .controlsContainer {
+  margin-top: 2em;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dashboardMain .controlsContainer .controlsContainer_item {
+  width: 70%;
+  min-width: 12em;
+  height: 2.3em;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-top: 1.5em;
+}
+
+.dashboardMain .controlsContainer .controlsContainer_item svg {
+  color: red;
+  position: relative;
+  top: 0.1em;
+  left: 0.31em;
+}
+
+/*
+.##.....##....###....####.##....##
+.###...###...##.##....##..###...##
+.####.####..##...##...##..####..##
+.##.###.##.##.....##..##..##.##.##
+.##.....##.#########..##..##..####
+.##.....##.##.....##..##..##...###
+.##.....##.##.....##.####.##....##
+*/
+.dashboardMain .mainContent .favoritesContainer h3 {
+  color: white;
+  font-size: 1.42em;
+}
+
+.dashboardMain .mainContent .favoritesContainer .favoritesContainer_items {
+  display: flex;
+}
+
+.dashboardMain .mainContent .favoritesContainer .favorites-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10em;
+  height: 4em;
+  background-color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.2em;
+  text-transform: uppercase;
+}
+
+.dashboardMain
+  .mainContent
+  .favoritesContainer
+  .favorites-item:not(:first-of-type) {
+  margin-left: 1em;
+}
+
+.dashboardMain .mainContent .favoritesContainer .favorites-item img {
+  width: 3em;
+  height: 3em;
+  margin-right: 0.2em;
+}
+
+.dashboardMain .mainContent .apps {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  max-height: 32em;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.dashboardMain .mainContent .apps::-webkit-scrollbar {
+  display: none;
+}
+
+.dashboardMain .mainContent .apps .app-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40%;
+  height: 6em;
+  border: 1px solid white;
+  margin: 1em 5em 1em 0em;
+  border-radius: 5px;
+  overflow: hidden;
+  text-decoration: none;
+}
+
+.dashboardMain .mainContent .apps .app-item .app-item--text {
+  display: flex;
+  align-items: center;
+  margin-left: 1em;
+}
+
+.dashboardMain .mainContent .apps .app-item .app-item--text button {
+  background-color: #062f6e;
+  color: #062f6e;
+  border: none;
+  cursor: pointer;
+}
+
+.dashboardMain .mainContent .apps .app-item .app-item--text span {
+  text-decoration: none;
+  color: white;
+  margin-left: 1em;
+  font-size: 1.3em;
+}
+
+.dashboardMain .mainContent .apps .app-item .app-item--image {
+  width: 50%;
+  height: 100%;
+}
+
+.switch-enter-from,
+.switch-leave-to {
+  opacity: 0;
+  transform: scale(0);
+}
+
+.switch-enter-to,
+.switch-leave-from {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.switch-enter-active,
+.switch-leave-active {
+  transition: all 0.25s ease;
 }
