--- a/packages/renderer/src/assets/css/dashboardStyles.css
+++ b/packages/renderer/src/assets/css/dashboardStyles.css
@@ -165,6 +165,11 @@
   border-radius: 5px;
   overflow: hidden;
   text-decoration: none;
+  transition: all 0.43s ease;
+}
+
+.dashboardMain .mainContent .apps .app-item:active {
+  transform: scale(0.98);
 }
 
 .dashboardMain .mainContent .apps .app-item .app-item--text {
@@ -192,19 +197,29 @@
   height: 100%;
 }
 
-.switch-enter-from,
-.switch-leave-to {
+/*
+.########.########.....###....##....##..######..####.########.####..#######..##....##
+....##....##.....##...##.##...###...##.##....##..##.....##.....##..##.....##.###...##
+....##....##.....##..##...##..####..##.##........##.....##.....##..##.....##.####..##
+....##....########..##.....##.##.##.##..######...##.....##.....##..##.....##.##.##.##
+....##....##...##...#########.##..####.......##..##.....##.....##..##.....##.##..####
+....##....##....##..##.....##.##...###.##....##..##.....##.....##..##.....##.##...###
+....##....##.....##.##.....##.##....##..######..####....##....####..#######..##....##
+*/
+
+.fadeZoom-enter-from,
+.fadeZoom-leave-to {
   opacity: 0;
   transform: scale(0);
 }
 
-.switch-enter-to,
-.switch-leave-from {
+.fadeZoom-enter-to,
+.fadeZoom-leave-from {
   opacity: 1;
   transform: scale(1);
 }
 
-.switch-enter-active,
-.switch-leave-active {
-  transition: all 0.25s ease;
+.fadeZoom-enter-active,
+.fadeZoom-leave-active {
+  transition: all 0.2s ease;
 }
