more updates to match new mockups for dashboard

--- a/packages/renderer/src/assets/css/dashboardStyles.css
+++ b/packages/renderer/src/assets/css/dashboardStyles.css
@@ -2,17 +2,6 @@
   display: flex;
 }
 
-.dashboardMain button,
-.dashboardMain a {
-  transition: all 0.43s ease;
-  cursor: pointer;
-}
-
-.dashboardMain button:active:not(.categories),
-.dashboardMain a:active {
-  transform: scale(0.98);
-}
-
 .dashboardMain .sidebar {
   width: 18%;
   display: flex;
@@ -29,6 +18,7 @@
   color: white;
   width: 20em;
   font-size: 3em;
+  font-weight: 700;
 }
 
 .dashboardMain .vertical-divider {
@@ -86,35 +76,20 @@
 
 .dashboardMain .controlsContainer {
   position: relative;
-  margin-top: 2em;
+  margin-top: 5em;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.dashboardMain .controlsContainer .controlsContainer_item.categories {
+.dashboardMain .btn {
   position: relative;
-}
-
-.dashboardMain
-  .controlsContainer
-  .controlsContainer_item.categories.showCategories {
-  background-color: #b03125;
-  color: white;
-}
-
-.dashboardMain
-  .controlsContainer
-  .controlsContainer_item.categories.showCategories
-  svg {
-  transform: rotate(180deg);
-  color: white;
-}
-
-.dashboardMain .controlsContainer .controlsContainer_item {
-  width: 70%;
-  min-width: 11em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 11em;
   height: 2.5em;
   font-size: 1.2em;
   text-transform: uppercase;
@@ -123,35 +98,49 @@
   border: none;
 }
 
-.dashboardMain .controlsContainer .categoriesList {
+.dashboardMain .btn .supportIcon {
+  width: 2em;
+  height: 1.5em;
+  display: inline;
+  margin-right: 0.71em;
+}
+
+.dashboardMain .btn.showDropDown {
+  background-color: #b03125;
+  color: white;
+}
+
+.dashboardMain .btn.showDropDown svg {
+  transform: rotate(180deg);
+  color: white;
+}
+
+.dashboardMain .btnList {
   position: absolute;
   top: 1.3em;
   left: 0em;
   z-index: 3;
   list-style: none;
-  background-color: rgb(239, 239, 239);
+  background-color: white;
   width: 100%;
   padding: 0;
 }
 
-.dashboardMain .controlsContainer .categoriesList .controlsContainer_item {
+.dashboardMain .btnList .btn {
   color: #062f6e;
   min-width: 9em;
   font-size: 1em;
 }
 
-.dashboardMain
-  .controlsContainer
-  .categoriesList
-  .controlsContainer_item.selected {
+.dashboardMain .btnList .btn.selected {
   color: white;
   background-color: #b03125;
 }
 
-.dashboardMain .controlsContainer .controlsContainer_item svg {
+.dashboardMain .btn svg {
   color: #b03125;
   position: relative;
-  top: 0.1em;
+  top: -0.1em;
   left: 0.31em;
   transition: all 0.3s ease;
 }
@@ -165,9 +154,14 @@
 .##.....##.##.....##..##..##...###
 .##.....##.##.....##.####.##....##
 */
+.dashboardMain .mainContent .headerSection {
+  display: flex;
+}
+
 .dashboardMain .mainContent .favoritesContainer h3 {
   color: white;
   font-size: 1.42em;
+  font-weight: 600;
 }
 
 .dashboardMain .mainContent .favoritesContainer .favoritesContainer_items {
@@ -211,7 +205,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  max-height: 40em;
+  max-height: 80vh;
   overflow-y: auto;
   scrollbar-width: none;
 }
