--- a/packages/renderer/src/assets/css/dashboardStyles.css
+++ b/packages/renderer/src/assets/css/dashboardStyles.css
@@ -205,7 +205,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  max-height: 80vh;
+  max-height: 40em;
   overflow-y: auto;
   scrollbar-width: none;
 }
@@ -215,6 +215,7 @@
 }
 
 .dashboardMain .mainContent .apps .app-item {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -225,6 +226,48 @@
   border-radius: 5px;
   overflow: hidden;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.dashboardMain .mainContent .apps .app-item .app-btns_container {
+  position: absolute;
+  top: 0.51em;
+  right: 12.5%;
+}
+
+.dashboardMain .mainContent .apps .app-item .app-btns_container button {
+  display: block;
+  width: 10em;
+  height: 2.5em;
+  border: none;
+  border-radius: 4px;
+  color: white;
+}
+
+.dashboardMain
+  .mainContent
+  .apps
+  .app-item
+  .app-btns_container
+  button.launchAppBtn {
+  background-color: #1cd011;
+}
+.dashboardMain
+  .mainContent
+  .apps
+  .app-item
+  .app-btns_container
+  button.previewAppBtn {
+  background-color: #ffb101;
+}
+
+.dashboardMain
+  .mainContent
+  .apps
+  .app-item
+  .app-btns_container
+  button:first-of-type {
+  margin-bottom: 0.7em;
 }
 
 .dashboardMain .mainContent .apps .app-item .app-item--text {
