more gesture fixes

--- a/packages/renderer/src/assets/css/whiteboardStyles.css
+++ b/packages/renderer/src/assets/css/whiteboardStyles.css
@@ -28,6 +28,10 @@
   user-select: none;
 }
 
+.gesture-area .scale-element {
+  width: 10em;
+}
+
 #scale-element {
   display: block;
   max-width: 100%;
